Test/dafny0/LiberalEquality.dfy.expect
LiberalEquality.dfy(22,14): Error: arguments must have comparable types (got T and U)
LiberalEquality.dfy(23,14): Error: arguments must have comparable types (got U and int)
LiberalEquality.dfy(31,14): Error: arguments must have comparable types (got array<T> and array3<T>)
LiberalEquality.dfy(32,14): Error: arguments must have comparable types (got array<int> and array3<int>)
LiberalEquality.dfy(33,14): Error: arguments must have comparable types (got array<T> and array3<int>)
LiberalEquality.dfy(34,14): Error: arguments must have comparable types (got array<int> and array3<T>)
LiberalEquality.dfy(42,14): Error: arguments must have comparable types (got Weird<T, int, V> and Weird<T, bool, V>)
LiberalEquality.dfy(52,13): Error: arguments must have comparable types (got Weird<T, bool, T> and Weird<T, int, T>)
LiberalEquality.dfy(61,14): Error: arguments must have comparable types (got array<int> and array<bool>)
LiberalEquality.dfy(73,13): Error: arguments must have comparable types (got T ~> int and int ~> int)
LiberalEquality.dfy(74,13): Error: arguments must have comparable types (got int ~> T and int ~> int)
LiberalEquality.dfy(84,13): Error: arguments must have comparable types (got Syn<int> and Syn<bool>)
LiberalEquality.dfy(95,13): Error: arguments must have comparable types (got array<List<int>> and array<List<bool>>) (invariant type parameter would require int = bool)
LiberalEquality.dfy(95,13): Error: arguments must have comparable types (got array<List<int>> and array<List<bool>>) (invariant type parameter would require bool = int)
LiberalEquality.dfy(97,13): Error: arguments must have comparable types (got array<List<bool>> and array<ListSynonym<T, int>>) (invariant type parameter would require bool = int)
LiberalEquality.dfy(97,13): Error: arguments must have comparable types (got array<List<bool>> and array<ListSynonym<T, int>>) (invariant type parameter would require int = bool)
LiberalEquality.dfy(99,13): Error: arguments must have comparable types (got array<List<int>> and array<ListSynonym<int, T>>) (invariant type parameter would require int = T)
LiberalEquality.dfy(99,13): Error: arguments must have comparable types (got array<List<int>> and array<ListSynonym<int, T>>) (invariant type parameter would require T = int)
LiberalEquality.dfy(100,13): Error: arguments must have comparable types (got array<List<bool>> and array<ListSynonym<int, T>>) (invariant type parameter would require bool = T)
LiberalEquality.dfy(100,13): Error: arguments must have comparable types (got array<List<bool>> and array<ListSynonym<int, T>>) (invariant type parameter would require T = bool)
LiberalEquality.dfy(101,13): Error: arguments must have comparable types (got array<ListSynonym<bool, int>> and array<ListSynonym<int, T>>) (invariant type parameter would require int = T)
LiberalEquality.dfy(101,13): Error: arguments must have comparable types (got array<ListSynonym<bool, int>> and array<ListSynonym<int, T>>) (invariant type parameter would require T = int)
LiberalEquality.dfy(103,13): Error: arguments must have comparable types (got array<List<bool>> and array<ListSynonym<real, Wrapper<int>>>) (invariant type parameter would require bool = Wrapper<int>)
LiberalEquality.dfy(103,13): Error: arguments must have comparable types (got array<List<bool>> and array<ListSynonym<real, Wrapper<int>>>) (invariant type parameter would require Wrapper<int> = bool)
24 resolution/type errors detected in LiberalEquality.dfy
